--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "@fortawesome/fontawesome-free": "5.9.0",
         "bootstrap": "4.3.1",
         "jquery": "^3.5.1",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "mustache": "^4.2.0"
     },
     "devDependencies": {
         "browser-sync": "^2.26.12",
