--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.9.0",
         "bootstrap": "4.3.1",
-        "jquery": "^3.5.1",
+        "jquery": "^3.6.3",
         "jquery.easing": "^1.4.1",
         "mustache": "^4.2.0"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.12",
+        "browser-sync": "^2.27.11",
         "del": "4.1.1",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "6.1.0",
@@ -45,7 +45,9 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
+        "gulp-terser": "^2.1.0",
         "gulp-uglify": "3.0.2",
+        "gulp-uglify-es": "^3.0.0",
         "merge-stream": "2.0.0"
     }
 }
